--- a/Projeto-individual/api/.env.dev
+++ b/Projeto-individual/api/.env.dev
@@ -1,11 +1,11 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST= localhost
+DB_HOST=10.18.32.214 
 DB_DATABASE='bobmarley'
-DB_USER='root'
-DB_PASSWORD='sptech'
-DB_PORT=3306
+DB_USER='aluno'
+DB_PASSWORD='Sptech#2024'
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
